Command line: Fix scrollbar background color

--- a/src/themes/clean-extra-large.scss
+++ b/src/themes/clean-extra-large.scss
@@ -195,6 +195,10 @@ body {
     height: 12px;
 }
 
+#commandInput::-webkit-scrollbar {
+    background-color: black;
+}
+
 /* Track */
 
 #display::-webkit-scrollbar-track,
