--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -178,6 +178,10 @@ body {
     height: 12px;
 }
 
+#commandInput::-webkit-scrollbar {
+    background-color: black;
+}
+
 /* Track */
 
 #display::-webkit-scrollbar-track,
