--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -186,6 +186,10 @@ body {
     height: 12px;
 }
 
+#commandInput::-webkit-scrollbar {
+    background-color: black;
+}
+
 /* Track */
 
 #display::-webkit-scrollbar-track,
